<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog_bg"
    android:padding="@dimen/space_xl">

    <TextView
        android:id="@+id/confirm_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:letterSpacing="0.14"
        android:text="@string/confirm_leave"
        android:textAppearance="@style/TextAppearance.App.Title"
        android:textColor="@color/color_danger"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/confirm_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_title"
        android:layout_marginTop="@dimen/space_md"
        android:gravity="center"
        android:text="@string/confirm_leave_body"
        android:textAppearance="@style/TextAppearance.App.Body"
        android:textSize="13sp" />

    <LinearLayout
        android:id="@+id/confirm_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_body"
        android:layout_marginTop="@dimen/space_xl"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm_stay"
            style="@style/Widget.App.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_secondary_height"
            android:layout_marginEnd="@dimen/space_md"
            android:layout_weight="1"
            android:text="@string/btn_stay" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm_leave"
            style="@style/Widget.App.Button.Primary"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_secondary_height"
            android:layout_weight="1"
            android:text="@string/btn_leave" />
    </LinearLayout>

</RelativeLayout>
