<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg">

    <ImageView
        android:id="@+id/menu_backdrop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/menu_scrim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/overlay_menu_scrim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.ZfQnLmK.vJxRpT.core.ui.StatCardView
        android:id="@+id/menu_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginTop="@dimen/status_bar_pad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_settings"
        style="@style/Widget.App.Button.Icon"
        android:layout_width="@dimen/icon_btn"
        android:layout_height="@dimen/icon_btn"
        android:layout_marginTop="@dimen/status_bar_pad"
        android:layout_marginEnd="@dimen/screen_margin"
        android:contentDescription="@string/cd_settings"
        app:icon="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/menu_hero"
        android:layout_width="@dimen/hero_ring"
        android:layout_height="@dimen/hero_ring"
        android:layout_marginTop="@dimen/space_lg"
        app:layout_constraintBottom_toTopOf="@id/menu_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_level"
        app:layout_constraintVertical_chainStyle="packed">

        <com.ZfQnLmK.vJxRpT.core.ui.RingPulseView
            android:id="@+id/menu_rings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no" />

        <ImageView
            android:id="@+id/menu_core"
            android:layout_width="@dimen/sprite_lg"
            android:layout_height="@dimen/sprite_lg"
            android:layout_gravity="center"
            android:contentDescription="@string/cd_core"
            android:scaleType="fitCenter"
            android:src="@drawable/sprite_core" />
    </FrameLayout>

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_lg"
        android:letterSpacing="0.12"
        android:shadowColor="@color/color_primary_bright"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="16"
        android:text="@string/title_brand"
        android:textAppearance="@style/TextAppearance.App.Display"
        app:layout_constraintBottom_toTopOf="@id/menu_tagline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_hero" />

    <TextView
        android:id="@+id/menu_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_sm"
        android:letterSpacing="0.24"
        android:text="@string/menu_tagline"
        android:textAppearance="@style/TextAppearance.App.Label"
        android:textColor="@color/color_secondary"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/menu_stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_title" />

    <LinearLayout
        android:id="@+id/menu_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_lg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/menu_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_tagline">

        <com.ZfQnLmK.vJxRpT.core.ui.StatCardView
            android:id="@+id/menu_stat_best"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_md" />

        <com.ZfQnLmK.vJxRpT.core.ui.StatCardView
            android:id="@+id/menu_stat_solved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_play"
        style="@style/Widget.App.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_primary_height"
        android:layout_marginStart="28dp"
        android:layout_marginTop="@dimen/space_xl"
        android:layout_marginEnd="28dp"
        android:text="@string/btn_play"
        app:icon="@drawable/ic_bolt"
        app:layout_constraintBottom_toTopOf="@id/menu_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_stats" />

    <LinearLayout
        android:id="@+id/menu_secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="@dimen/space_md"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="@dimen/controls_bottom_margin"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_play">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_schemes"
            style="@style/Widget.App.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_secondary_height"
            android:layout_marginEnd="@dimen/space_md"
            android:layout_weight="1"
            android:text="@string/btn_schemes" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_tutorial"
            style="@style/Widget.App.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_secondary_height"
            android:layout_weight="1"
            android:text="@string/btn_tutorial" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
