<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/result_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_result_gradient_lose">

    <View
        android:id="@+id/result_grid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.1"
        android:background="@drawable/bg_grid_overlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/status_bar_pad"
        android:letterSpacing="0.06"
        android:textAppearance="@style/TextAppearance.App.Headline"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="YOU WON!" />

    <TextView
        android:id="@+id/result_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginTop="@dimen/space_sm"
        android:layout_marginEnd="@dimen/screen_margin"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.App.Label"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_title"
        tools:text="VIOLET CORE, 8 SEGMENTS" />

    <FrameLayout
        android:id="@+id/result_board_area"
        android:layout_width="@dimen/result_board"
        android:layout_height="@dimen/result_board"
        android:layout_marginTop="@dimen/space_lg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_subtitle">

        <com.ZfQnLmK.vJxRpT.core.ui.RingBoardView
            android:id="@+id/result_board"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/result_spark"
            android:layout_width="@dimen/result_spark"
            android:layout_height="@dimen/result_spark"
            android:layout_gravity="top|end"
            android:contentDescription="@string/cd_spark"
            android:scaleType="fitCenter"
            android:src="@drawable/sprite_spark"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/result_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_lg"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_board_area">

        <ImageView
            android:id="@+id/result_star_1"
            android:layout_width="@dimen/star_size"
            android:layout_height="@dimen/star_size"
            android:layout_marginEnd="@dimen/space_sm"
            android:contentDescription="@string/cd_star"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_star_off" />

        <ImageView
            android:id="@+id/result_star_2"
            android:layout_width="@dimen/star_size"
            android:layout_height="@dimen/star_size"
            android:layout_marginEnd="@dimen/space_sm"
            android:contentDescription="@string/cd_star"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_star_off" />

        <ImageView
            android:id="@+id/result_star_3"
            android:layout_width="@dimen/star_size"
            android:layout_height="@dimen/star_size"
            android:contentDescription="@string/cd_star"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_star_off" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/result_stats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginTop="@dimen/space_lg"
        android:layout_marginEnd="@dimen/screen_margin"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/result_play_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_stars"
        app:layout_constraintVertical_bias="0.0">

        <com.ZfQnLmK.vJxRpT.core.ui.StatCardView
            android:id="@+id/result_stat_moves"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_sm"
            android:layout_weight="1" />

        <com.ZfQnLmK.vJxRpT.core.ui.StatCardView
            android:id="@+id/result_stat_targets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_sm"
            android:layout_weight="1" />

        <com.ZfQnLmK.vJxRpT.core.ui.StatCardView
            android:id="@+id/result_stat_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/result_play_again"
        style="@style/Widget.App.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="@dimen/space_lg"
        android:text="@string/btn_play_again"
        app:icon="@drawable/ic_restart"
        app:layout_constraintBottom_toTopOf="@id/result_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/result_secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="@dimen/controls_bottom_margin"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/result_next"
            style="@style/Widget.App.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_secondary_height"
            android:layout_marginEnd="@dimen/space_md"
            android:layout_weight="1"
            android:text="@string/btn_next_scheme" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/result_menu"
            style="@style/Widget.App.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_secondary_height"
            android:layout_weight="1"
            android:text="@string/btn_menu" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
