<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_gradient">

    <ImageView
        android:id="@+id/splash_backdrop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_loader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/splash_grid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.16"
        android:background="@drawable/bg_grid_overlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.ZfQnLmK.vJxRpT.core.ui.RingPulseView
        android:id="@+id/splash_rings"
        android:layout_width="@dimen/splash_ring"
        android:layout_height="@dimen/splash_ring"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toTopOf="@id/splash_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/splash_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xxl"
        android:letterSpacing="0.14"
        android:shadowColor="@color/color_primary_bright"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="18"
        android:text="@string/title_brand"
        android:textAppearance="@style/TextAppearance.App.Display"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_rings" />

    <TextView
        android:id="@+id/splash_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        android:alpha="0.9"
        android:letterSpacing="0.28"
        android:text="@string/splash_tagline"
        android:textAppearance="@style/TextAppearance.App.Label"
        android:textColor="@color/color_secondary"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_title"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/splash_progress"
        style="@style/Widget.App.Progress.Loader"
        android:layout_width="@dimen/progress_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_lg"
        android:indeterminate="true"
        app:layout_constraintBottom_toTopOf="@id/splash_loading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/splash_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_xxl"
        android:accessibilityLiveRegion="polite"
        android:letterSpacing="0.24"
        android:text="@string/splash_loading"
        android:textAppearance="@style/TextAppearance.App.Label"
        android:textColor="@color/color_text_muted"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
