<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg">

    <ImageView
        android:id="@+id/tutorial_backdrop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.45"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/tutorial_vignette"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/overlay_game_vignette"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tutorial_toolbar"
        style="@style/Widget.App.Toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_header_scrim"
        android:paddingTop="@dimen/status_bar_pad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/title_tutorial" />

    <FrameLayout
        android:id="@+id/tutorial_board_area"
        android:layout_width="@dimen/tutorial_board"
        android:layout_height="@dimen/tutorial_board"
        android:layout_marginTop="@dimen/space_lg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tutorial_toolbar">

        <com.ZfQnLmK.vJxRpT.core.ui.RingBoardView
            android:id="@+id/tutorial_board"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </FrameLayout>

    <TextView
        android:id="@+id/tutorial_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_sm"
        android:accessibilityLiveRegion="polite"
        android:background="@drawable/shape_pill"
        android:minHeight="@dimen/btn_min_touch"
        android:gravity="center"
        android:paddingStart="@dimen/space_lg"
        android:paddingEnd="@dimen/space_lg"
        android:text="@string/tutorial_hint"
        android:textAppearance="@style/TextAppearance.App.Label"
        android:textColor="@color/color_secondary"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tutorial_board_area" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/tutorial_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="@dimen/screen_margin"
        android:paddingTop="@dimen/space_md"
        android:paddingEnd="@dimen/screen_margin"
        android:paddingBottom="@dimen/space_md"
        app:layout_constraintBottom_toTopOf="@id/tutorial_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tutorial_hint">

        <LinearLayout
            android:id="@+id/tutorial_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tutorial_start"
        style="@style/Widget.App.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="@dimen/controls_bottom_margin"
        android:text="@string/btn_start_play"
        app:icon="@drawable/ic_bolt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
